--- a/stockwatch/Resources/Strings/AppResources.resx
+++ b/stockwatch/Resources/Strings/AppResources.resx
@@ -117,10 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="MSG_AddToFavoriteSuccessfully" xml:space="preserve">
+    <value>Added "{0}" to favorite list</value>
+  </data>
   <data name="MSG_PleaseInputSymbol" xml:space="preserve">
     <value>Please input a symbol</value>
   </data>
   <data name="MSG_PleaseInputValidPrice" xml:space="preserve">
     <value>Please input a valid price other than zero</value>
+  </data>
+  <data name="MSG_RemoveToFavoriteSuccessfully" xml:space="preserve">
+    <value>Remove "{0}" from favorite list</value>
+  </data>
+  <data name="MSG_StartFollowingSymbol" xml:space="preserve">
+    <value>Started following "{0}"</value>
   </data>
 </root>
