--- a/stockwatch/Resources/Strings/AppResources.vi.resx
+++ b/stockwatch/Resources/Strings/AppResources.vi.resx
@@ -117,6 +117,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="LBL_DataCollection" xml:space="preserve">
+    <value />
+  </data>
+  <data name="LBL_FromDate" xml:space="preserve">
+    <value />
+  </data>
+  <data name="LBL_Process" xml:space="preserve">
+    <value />
+  </data>
+  <data name="LBL_ToDate" xml:space="preserve">
+    <value />
+  </data>
+  <data name="MSG_Date1MustBeGreaterThanOrEqualDate2" xml:space="preserve">
+    <value />
+  </data>
   <data name="MSG_PleaseInputSymbol" xml:space="preserve">
     <value>Vui lòng nhập 1 mã chứng khoán</value>
   </data>
